# zkml-dup

./: .gitignore
private-credit-lending/: Cargo.toml  README.md  RUNNING_LOCALLY.md
private-credit-lending/contracts/lending-pool/: Cargo.toml
private-credit-lending/contracts/lending-pool/src/: lib.rs  test.rs
private-credit-lending/core/: Cargo.toml
private-credit-lending/core/src/: lib.rs
private-credit-lending/host/: Cargo.toml
private-credit-lending/host/src/: main.rs
private-credit-lending/methods/guest/: Cargo.toml
private-credit-lending/methods/guest/src/: main.rs
private-credit-lending/scripts/: demo.sh
src/ir/: load_onnx.rs
src/ir/op/: conv.rs  max.rs  maxpool.rs  mod.rs  reshape.rs
