[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risk_core = { path = "../core" }
risc0-zkvm = { version = "^3.0" }
risc0-ethereum-contracts = "^3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
