[package]
name = "guest_program"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "^3.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
risk_core = { path = "../../core" }

[[bin]]
name = "guest_program"
path = "src/main.rs"
